<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp20"
        android:text="@string/item_view"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp18" />

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/linear_list2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/item_name" />
        </LinearLayout>

        <LinearLayout style="@style/linear_list2">

            <TextView
                android:id="@+id/product_name_view_text"
                style="@style/ProductViewdetailStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/linear_list1">

        <LinearLayout style="@style/linear_list2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/item_price" />
        </LinearLayout>

        <LinearLayout style="@style/linear_list2">

            <TextView
                android:id="@+id/product_price_view_text"
                style="@style/ProductViewdetailStyle" />

            <TextView
                style="@style/currency_style"
                android:layout_marginLeft="@dimen/dp16"
                android:text="@string/item_price_currency" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/linear_list2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/item_quantity" />
        </LinearLayout>

        <LinearLayout style="@style/linear_list2">

            <TextView
                android:id="@+id/product_quantity_view_text"
                style="@style/ProductViewdetailStyle" />

            <LinearLayout
                style="@style/linear_list2"
                android:paddingLeft="@dimen/dp16">

                <LinearLayout style="@style/linear_list2">

                    <Button
                        android:id="@+id/increase_button"
                        android:layout_width="@dimen/dp30"
                        android:layout_height="@dimen/dp30"
                        android:background="@color/colorAccent"
                        android:text="+"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout style="@style/linear_list2">

                    <Button
                        android:id="@+id/decrease_button"
                        android:layout_width="@dimen/dp30"
                        android:layout_height="@dimen/dp30"
                        android:background="@color/colorAccent"
                        android:text="-"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/linear_list2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/item_supplier" />
        </LinearLayout>

        <LinearLayout style="@style/linear_list2">

            <TextView
                android:id="@+id/product_supplier_name_view_text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:paddingRight="@dimen/dp16" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/linear_list2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/supplier_number" />
        </LinearLayout>

        <LinearLayout style="@style/linear_list2">

            <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

                <LinearLayout
                    android:layout_width="@dimen/dp0"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_supplier_phone_number_view_text"
                        style="@style/ProductViewdetailStyle" />
                </LinearLayout>

                <LinearLayout style="@style/linear_list2">

                    <Button
                        android:id="@+id/phone_button"
                        android:layout_width="@dimen/dp35"
                        android:layout_height="@dimen/dp40"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/icon_phone"
                        android:focusable="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityViewLinearLayoutsection1"
        android:gravity="center">

        <Button
            android:id="@+id/delete_button"
            style="@style/ActivityViewButtonStyle"
            android:drawableLeft="@drawable/icon_delete"
            android:text="Delete" />
    </LinearLayout>



</LinearLayout>